--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
                 where guests can relax, unwind, and enjoy their time in confort.
             </p>
             <div class="social-link-list">
-                <a href="#" class="social-link">
+                <a href="https://www.facebook.com/smeyrolex168" class="social-link">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
-                <a href="#" class="social-link">
+                <a href="https://www.google.com/" class="social-link">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
-                <a href="#" class="social-link">
+                <a href="https://www.youtube.com/" class="social-link">
                     <i class="fa-brands fa-x-twitter"></i>
                 </a>
             </div>
@@ -226,7 +226,7 @@
                 <ul class="contact-info-list">
                     <li class="contact-info">
                         <i class="fa-solid fa-location-crosshairs"></i>
-                        <p>123 Campsite Avenue, Wilderness, CA 987654</p>
+                        <p>No. 13 St 16B Sangkat Chaom Chau 2, Khan PurSenChey, Phnom Penh</p>
                     </li>
                     <li class="contact-info">
                         <i class="fa-regular far-phone"></i>
@@ -265,21 +265,21 @@
                 <p class="copyright-text"> 2025 Coffee Shop Chan Reaksmey</p>
 
                 <div class="social-link-list">
-                    <a href="#" class="social-link">
+                    <a href="https://www.facebook.com/smeyrolex168" class="social-link">
                         <i class="fa-brands fa-facebook"></i>
                     </a>
-                    <a href="#" class="social-link">
+                    <a href="https://www.google.com/" class="social-link">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
-                    <a href="#" class="social-link">
+                    <a href="https://www.youtube.com/" class="social-link">
                         <i class="fa-brands fa-x-twitter"></i>
                     </a>
                 </div>
 
                 <p class="policy-text">
-                    <a href="#" class="policy-link">Privacy policy</a>
+                    <a href="https://www.google.com/" class="policy-link">Privacy policy</a>
                     <span class="separator">.</span>
-                    <a href="#" class="policy-link">Refund policy</a>
+                    <a href="https://www.youtube.com/" class="policy-link">Refund policy</a>
                 </p>
             </div>
         </footer>
